TASK 4: adds an image that is fixed to the bottom right of page even when scrolling. Uses lorem picsum for a randomly selected image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Swift Case Technical Challenge</title>
 
-    <link rel="stylesheet" href="" type="text/css"> <!--NEED TO ADD CSS-->
+    <link rel="stylesheet" href="styling.css" type="text/css">
     <script defer src="JavaScript/technicalChallenge.js"></script>
 </head>
 
@@ -17,4 +17,6 @@
             Request
         </button>
     </form>
+    
+    <img id="randomBottomRightImage" src="https://picsum.photos/300" alt="A random image"/> <!--NOTE: Uses a random image, if I used an image in the files, src would be the filepath instead. -->
 </body>
