TASK 5: added a navbar to the top of the page containg 3 links, these lead to my portfolio, github and a collection viewing site personal project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <header>
+        <nav id="pageNav">
+            <a href="https://2024-connory.dev.io-academy.uk/index.html" target="_blank" class="links">Portfolio</a>
+            <a href="https://github.com/AtlasRB" target="_blank" class="links">GitHub</a>
+            <a href="https://cardcollection.2024-connory.dev.io-academy.uk" target="_blank" class="links">Card Collection</a>
+        </nav>
+    </header>
+
     <form method="get" id="getProductStatusID">
         <label for="productStatusID">Product Status ID</label>
         <input type="text" name="productStatusID" id="productStatusID"> <!--NOTE: used type="text" since step 1 specified a textbox, otherwise I would have used type="number" since its selecting an integer number.-->
